# mxl-plyr

./: .build-env  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cog.toml  devenv.nix  devenv.yaml  icons.toml  justfile  meson.build  meson_options.txt  rustfmt.toml  sancus.yaml  shell.nix  vcpkg-configuration.json  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: audit.yml  check.yml  package.yml
.github/workflows/docker-build/: action.yml
.github/workflows/mxl-setup/: action.yml
data/resources/: com.x-software.mxl.plyr.desktop.in.in  meson.build  resources.gresource.xml
docker/: Dockerfile  pkg-config
i18n/de/: mxl_plyr.ftl
i18n/en/: mxl_plyr.ftl
src/: about.rs  app.rs  commandline.rs  icon_names.rs  localization.rs  main.rs
src/application/preferences/: mod.rs  preferences_manager.rs  version1.rs  version2.rs  version_next.rs
src/ui/preferences/: messages.rs  model.rs  widget.rs
vcpkg-ports-mxl-plyr/gstreamer/: portfile.cmake  vcpkg.json
