[package]
name = "mxl_plyr"
version = "1.1.1"
license = "MIT OR Apache-2.0"
description = "Media player focused on the use with the MXL Recorder"
keywords = [
    "player",
    "playback",
    "multimedia",
    "video",
    "audio",
    "gstreamer",
    "relm4",
]
categories = ["multimedia", "multimedia::video", "multimedia::audio"]
repository = "https://github.com/x-software-com/mxl-plyr"
homepage = "https://github.com/x-software-com/mxl-plyr"
readme = "README.md"
edition = "2021"
rust-version = "1.80"

[dependencies]
log = "0.4"
anyhow = "1"
const_format = "0.2"
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gst = { package = "gstreamer", version = "0.23", features = ["v1_24"] }
mxl-base = "0.2.5"
mxl-relm4-components = { version = "0.2.3", features = [
    "third_party_licenses_dialog",
] }
relm4-icons = { version = "0.9", features = ["all"] }
mxl-investigator = { version = "0.1.21", features = [
    "create_report_dialog",
    "problem_report_dialog",
] }
mxl-player-components = "0.1.1"

# Internationalization:
i18n-embed-fl = "0.9"
rust-embed = { version = "8", features = ["debug-embed"] }
i18n-embed = { version = "0.15", features = [
    "fluent-system",
    "desktop-requester",
] }

[features]
default = ["x11egl", "x11glx", "wayland", "dmabuf"]
x11egl = ["mxl-player-components/x11egl"]
x11glx = ["mxl-player-components/x11glx"]
wayland = ["mxl-player-components/wayland"]
dmabuf = ["mxl-player-components/dmabuf"]

[build-dependencies]
vergen-gitcl = { version = "1", features = ["build", "cargo", "rustc", "si"] }
glib-build-tools = "0.20"
regex = { version = "1" }

##
## For local path overrides for MXL crate development uncomment the flollwing block:
## NOTE: You must run `cargo update` after changing this for it to take effect!
##
# [patch.crates-io]
# mxl-base = { path = "../mxl-crates/mxl-base" }
# mxl-relm4-components = { path = "../mxl-crates/mxl-relm4-components" }
# mxl-investigator = { path = "../mxl-crates/mxl-investigator" }
# mxl-player-components = { path = "../mxl-crates/mxl-player-components" }
# sancus = { path = "../sancus" }
